RESOLVED FIXED182809
Do sibling invalidation on mutation
https://bugs.webkit.org/show_bug.cgi?id=182809
Summary Do sibling invalidation on mutation
Antti Koivisto
Reported 2018-02-14 14:45:52 PST
It invalidates too much with accurate class/attribute invalidation.
Attachments
patch (17.35 KB, patch)
2018-02-14 14:54 PST, Antti Koivisto
no flags
patch (20.46 KB, patch)
2018-02-14 15:57 PST, Antti Koivisto
zalan: review+
patch (20.45 KB, patch)
2018-02-14 16:26 PST, Antti Koivisto
no flags
Antti Koivisto
Comment 1 2018-02-14 14:54:51 PST
Antti Koivisto
Comment 2 2018-02-14 15:57:17 PST
Antti Koivisto
Comment 3 2018-02-14 16:26:16 PST
WebKit Commit Bot
Comment 4 2018-02-14 17:27:57 PST
Comment on attachment 333857 [details] patch Clearing flags on attachment: 333857 Committed r228497: <https://trac.webkit.org/changeset/228497>
WebKit Commit Bot
Comment 5 2018-02-14 17:27:59 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 6 2018-02-14 17:28:35 PST
Note You need to log in before you can comment on or make changes to this bug.